auto 2020 test